--- a/ui/index.html
+++ b/ui/index.html
@@ -23,25 +23,11 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
     <!-- Favicons -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/src/assets/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/src/assets/favicon-16x16.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/src/assets/apple-touch-icon.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <!-- manifest -->
-    <link rel="manifest" href="/src/assets/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>SongStitch</title>
   </head>
   <body>
