--- a/ui/index.html
+++ b/ui/index.html
@@ -19,10 +19,7 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks!"
     />
-    <meta
-      property="og:image"
-      content="/src/static/images/songstitch_background.png"
-    />
+    <meta property="og:image" content="/songstitch_background.png" />
     <meta property="og:url" content="https://songstitch.art/" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
@@ -37,10 +34,7 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks"
     />
-    <meta
-      property="og:image"
-      content="https://songstitch.art/src/static/images/songstitch_background.png"
-    />
+    <meta property="og:image" content="/songstitch_background.png" />
     <meta property="og:url" content="https://songstitch.art/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="SongStitch" />
@@ -52,10 +46,7 @@
       name="twitter:description"
       content="Generate an image collage of your most played albums, artists, or tracks"
     />
-    <meta
-      name="twitter:image"
-      content="https://songstitch.art/src/static/images/songstitch_background.png"
-    />
+    <meta name="twitter:image" content="/songstitch_background.png" />
 
     <!-- manifest -->
     <link rel="manifest" href="/site.webmanifest" />
@@ -73,7 +64,7 @@
           "name": "SongStitch",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://songstitch.art/src/static/images/songstitch_background.png"
+            "url": "/songstitch_background.png"
           }
         }
       }
