--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <!-- Open Graph (Facebook and others) -->
+    <!-- Open Graph -->
     <meta property="og:title" content="SongStitch" />
     <meta
       property="og:description"
